dark mode fixes

--- a/src/components/menu/MenuSearch.module.scss
+++ b/src/components/menu/MenuSearch.module.scss
@@ -3,6 +3,7 @@
   border: 1px solid var(--border-color);
   display: flex;
   align-items: center;
+  background-color: var(--bg-primary);
 
   .icon {
     padding: 16px;
