--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -55,6 +55,9 @@
 body {
   margin: 0;
   background-color: var(--bg-primary);
+}
+
+* {
   font-family: var(--font-sans);
   color: var(--text-primary);
 }
